# rust_feiniao

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  constants.rs  crypto.rs  lib.rs  main.rs
src/components/: LoginRegister.vue
src/router/: index.ts
