[package]
name = "app"
version = "0.0.1"
description = "飞鸟快验Rust demo"
authors = ["4f5759"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
base64 = "0.21"
md5 = "0.7"
rand = { version = "0.8.5" }
rand_core = "0.6.4"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18"
lazy_static = "1.4.0"
